--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-if": "^4.1.6",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
