--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-if": "^4.1.6",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1"
