--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clsx": "^2.1.1",
     "motion": "^12.23.12",
     "next": "15.5.2",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
